test/sema/struct_redeclared_with_function.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn S() -> void {
// CHECK: [[# @LINE - 1 ]]:1: error: redeclaration of 'S'
}

struct S {
  x: int,
}

fn main() -> void {
}
